# front_end

./: .gitignore  CMakeLists.txt  README.md  index.md  package.xml  setup.py
include/front_end/: StereoCamera.hpp  WindowMatcher.hpp  nodeTypes.hpp  sba_solver.hpp  utils.hpp
launch/: baseLaunch.xml  recordStereo.xml  recordWindow.xml  simulationBaseLaunch.xml
msg/: Descriptors.msg  DetectorParameter.msg  FrameTracks.msg  Homography.msg  InterWindowFrame.msg  ProcTime.msg  StereoFrame.msg  StereoMatch.msg  Window.msg  WindowFrame.msg  cvMatch.msg  frameDetection.msg  frameExtract.msg  interFrameTracks.msg  kPoint.msg  loopStereoFrame.msg  stereoFeatures.msg  stereoLandmarks.msg  windowStatus.msg  ~Descriptors.msg  ~Feature.msg  ~FrameTracks.msg  ~Landmark.msg  ~ORB.msg  ~StereoMatch.msg  ~Window.msg
scripts/: front_end_utils.py
src/: CMakeLists.txt  StereoCamera.cpp  WindowMatcher.cpp  feature_node_cpp.cpp  front_end_extraction_node.cpp  front_end_node.cpp  front_end_window_node.cpp  live_stereo.cpp  nodeTypes.cpp  precomp.hpp  sba_demo.cpp  sba_node.cpp  sba_solver.cpp  utils.cpp  ~WindowMatcher .cpp
src/front_end/: algorithm.py  analysis.py  features.py  motion.py  simulation.py  stereo.py  utils.py  visualize.py  ~motion.py  ~simulation.py
srv/: controlDetection.srv  getStereoFeatures.srv  setDetector.srv  singleImageDetection.srv  singleImageExtraction.srv  singleStereo.srv  stereoMatching.srv  windowMatching.srv  ~detectCurrent.srv  ~setDetector.srv  ~singleImageDescription.srv
vidDebug/: CMakeLists.txt  buffer.cpp  time.cpp
